[metadata]
name = nf
url = https://github.com/NIC-MichalLabedzki/nf
description =  Simple command line tool to make notification after target program finished work
long_description = file: README.rst
author = Michał Łabędzki
author_email = michal.tomasz.labedzki@gmail.com
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    License :: OSI Approved
    License :: Freely Distributable
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy

#    License :: OSI Approved :: Free Public License 1.0.0
[options]
py_modules = nf
packages = find:
setup_requires = setuptools_scm
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    nf = nf:main

[bdist_wheel]
universal = true
