[metadata]
name = nf
url = https://github.com/NIC-MichalLabedzki/nf
download_url = https://github.com/NIC-MichalLabedzki/nf/raw/master/nf.pyg
description =  Simple command line tool to make notification after target program finished work
long_description = file: README.rst
author = Michał Łabędzki
author_email = michal.tomasz.labedzki@gmail.com
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    License :: OSI Approved
    License :: Freely Distributable
    License :: Public Domain
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Android
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 7
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: X11 Applications
    Environment :: X11 Applications :: KDE
    Environment :: Win32 (MS Windows)
    Environment :: MacOS X
    Topic :: Desktop Environment
    Topic :: Desktop Environment :: K Desktop Environment (KDE)
    Topic :: Office/Business
    Topic :: Software Development
keywords = nf, notification, notifications, notify, hint, tip, toast, wsl, windows, linux, termux, android, tmux, screen, yakuake, konsole, console, terminal, detach, process, wait, pid, build, compile, building, compiling, time measurement

#    License :: OSI Approved :: Free Public License 1.0.0
[options]
py_modules = nf

[options.entry_points]
console_scripts =
    nf = nf:main

[bdist_wheel]
universal = true
